pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constSubclass2.pkl
open class Foo {
  x: Int
}

class Bar extends Foo {
  const x = 2
}

bar = new Bar {}
